add_library(LibS06)

target_sources(LibS06
    PRIVATE
        File.hpp
        S06Collision.cpp
        S06Collision.h
        S06Common.cpp
        S06Common.h
        S06DAE.cpp
        S06Set.cpp
        S06Set.h
        S06Text.cpp
        S06Text.h
        S06XnBones.cpp
        S06XnEffect.cpp
        S06XnFile.cpp
        S06XnFile.h
        S06XnFileFBX.cpp
        S06XnMotion.cpp
        S06XnObject.cpp
        S06XnObjectBone.cpp
        S06XnObjectIndex.cpp
        S06XnObjectMaterial.cpp
        S06XnObjectMesh.cpp
        S06XnObjectOldMaterial.cpp
        S06XnObjectPolygon.cpp
        S06XnObjectVertex.cpp
        S06XnObjectVertexResource.cpp
        S06XnTexture.cpp
)

target_link_libraries(LibS06
    PUBLIC 
        glm
)

target_include_directories(LibS06 
    PUBLIC 
        ../dependencies/half
        ../dependencies/sha1
        ../dependencies/tinyxml
        ../dependencies/tristripper
)
